fix alignment

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -14,6 +14,7 @@
 body {
     @include body;
     
+    
     align-items: center;
     background-color: var(--blue950);
     color: var(--blue500);
@@ -21,6 +22,8 @@ body {
     font-family: Outfit, sans-serif;
     font-size: 1.125rem;
     justify-content: center;
+    margin: auto;
+
 }
 
 img {
